# MedFund-AI-Powered-Medical-Crowdfunding-with-Blockchain

./: README.md  app.py  gitignore.txt  index.html  package-lock.json  package.json  pyproject.toml  severity_model.py  theme.json
client/src/: App.tsx
client/src/components/: patient-card.tsx
client/src/lib/: web3Service.ts
client/src/pages/: auth-page.tsx  create-campaign.tsx  donate-page.tsx  home-page.tsx  patient-profile.tsx
client/src/types/: window.d.ts
instance/: medical_fund.db
server/: auth.ts  blockchain.py  db.ts  index.ts  routes.ts  storage.ts
server/services/: ml-severity-model.ts  severity-scorer.ts  train-severity-model.ts
shared/: schema.ts
shared/contracts/: MedicalFunding.sol  MedicalFundingContract.sol
templates/: create_campaign.html  donate.html  home.html
